--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,6 +1,13 @@
 <!--pages/home/home.wxml-->
 <view class="container">
-  <view class="tabs"></view>
+  <view class="tabs">
+    <view class="tab-item"
+    wx:for="{{tabs}}">
+      <view class="tab-label">
+        {{item}}
+      </view>
+    </view>
+  </view>
   <view class="category">
     <swiper display-multiple-items="{{2}}" next-margin="60rpx">
       <swiper-item wx:for="{{categoryList}}" wx:key="index">
