--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,1 +1,16 @@
 /* pages/home/home.wxss */
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+} 
+.tabs{
+  display: flex;
+  
+}
+.tab-item{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
