--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -6,6 +6,7 @@
       <view class="tab-label">
         {{item}}
       </view>
+      <view class="divider"></view>
     </view>
   </view>
   <view class="category">
