--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,22 +1,22 @@
 /* pages/home/home.wxss */
-.container {
+/* .container {
   height: 100%;
   display: flex;
   flex-direction: column;
-} 
-.tabs{
-  display: flex;
-  
+}  */
+
+.category-swipter-item{
+  border-radius: 20rpx;
+  width:300rpx;
+  height:150rpx;
+  background-image: linear-gradient(to right,#e68d44,#eb6d59);
 }
-.tab-item{
-  flex:1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.category-name{
+  position:absolute;
+  color:#fff;
+  top:20rpx;
+  left:20rpx;
 }
-.divider{
-  margin-top:10rpx;
-  height:6rpx;
-  width:50rpx;
-  background-color:#f3d066 ;
+.category{
+  padding:30rpx 0rpx 30rpx 30rpx;
 }
