--- a/pages/message/message.wxml
+++ b/pages/message/message.wxml
@@ -1,2 +1,4 @@
 <!--pages/message/message.wxml-->
-<text>pages/message/message.wxml</text>
+<wxs src="../../common/wxs/tools.wxs" module="tools"/>
+
+<view id="tapTest" data-hi="Weixin" bindtap="{{tools.tapName}}"> Click me! </view>
