--- a/components/service-preview/service-preview.wxss
+++ b/components/service-preview/service-preview.wxss
@@ -1,1 +1,80 @@
 /* components/service-preview/service-preview.wxss */
+
+
+.container{
+  background-color: #fff;
+  border-radius: 10rpx;
+  padding:30rpx 30rpx;
+  width:100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  font-size: 22rpx;
+
+}
+.type-tag{
+  position:absolute;
+  right: 0;
+  font-size: 14rpx;
+  opacity: 0.7;
+  background-color: #333;
+  color:#fff;
+  z-index:2;
+  padding:10rpx;
+}
+.left{
+  position:relative;
+}
+.right{
+  width: 100%;
+  margin-left:30rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.cover-image{
+  width:180rpx;
+  height:190rpx;
+  border-radius: 10rpx;
+}
+.row{
+  display: flex;
+  align-items: center;
+}
+.category{
+  display: flex;
+  align-items:center;
+  margin-left:20px;
+}
+.publisher{
+  display: flex;
+  align-items:center;
+}
+.publisher-avatar-image{
+  width:40rpx;
+  height:40rpx;
+  border-radius: 50%;
+}
+.publisher-nickname{
+  margin-left:10rpx;
+}
+.price{
+  font-size:32rpx;
+  color:red;
+}
+.score{
+  color:#f27013;
+}
+.sales{
+  color:#888;
+}
+.create-time{
+  color:#888;
+}
+.row-last{
+  justify-content: space-between;
+}
+.lable{
+  color:red;
+  font-size: 22rpx;
+}
